<?xml version="1.0" encoding="utf-8"?>
<!--Created by Liyang Chen and the combination with the code done by Zhenyan Li, Group 27, Comp215, University of Liverpool -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <ImageView
        android:id="@+id/iv_registeractivity_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="155dp"
        android:layout_height="59dp"
        android:fontFamily="@font/bold"
        android:text="@string/register"
        android:textColor="@color/light_gray"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_registeractivity_back"
        app:layout_constraintVertical_bias="0.036" />

    <EditText
        android:id="@+id/et_registeractivity_username"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/please_enter_username"
        android:inputType="textPersonName"
        android:textColorHint="@color/blue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:id="@+id/et_registeractivity_password1"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/please_enter_password"
        android:inputType="textPassword"
        android:textColorHint="@color/blue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_registeractivity_username" />

    <EditText
        android:id="@+id/et_registeractivity_password2"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/please_enter_password_again"
        android:inputType="textPassword"
        android:textColorHint="@color/blue"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_registeractivity_password1" />

    <Button
        android:id="@+id/bt_registeractivity_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="124dp"
        android:background="@drawable/button"
        android:fontFamily="@font/regular"
        android:text="@string/register_and_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/IDNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ID:"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="164dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>