<?xml version="1.0" encoding="utf-8"?>
<!--Created by Liyang Chen and the combination with the code done by Yifan Zhu, Group 27, Comp215, University of Liverpool -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Main.BudgetActivity"
    android:background="@color/green">

    <ImageView
        android:id="@+id/homebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />


    <ImageView
        android:id="@+id/backbtn_budget"
        android:layout_width="43dp"
        android:layout_height="35dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="365dp"
        android:layout_height="67dp"
        android:fontFamily="@font/bold"
        android:text="@string/tell_us_your_budget"
        android:textColor="@color/light_gray"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backbtn_budget"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@drawable/clock" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="88dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.159"
        app:srcCompat="@drawable/pound" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="88dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.263"
        app:srcCompat="@drawable/person" />

    <EditText
        android:id="@+id/timeBudget"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/please_enter_time_nbudget_here"
        android:inputType="number|textPersonName"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/moneyBudget"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/enter_your_money_budget"
        android:inputType="number|textPersonName"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/timeBudget"
        app:layout_constraintVertical_bias="0.867" />

    <EditText
        android:id="@+id/peopleBudget"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/input_field"
        android:ems="10"
        android:fontFamily="@font/regular"
        android:hint="@string/enter_the_travelers_amount"
        android:inputType="number|textPersonName"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/moneyBudget"
        app:layout_constraintVertical_bias="0.359" />

    <Button
        android:id="@+id/nextcitybtn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button"
        android:fontFamily="@font/regular"
        android:text="@string/next_choose_a_city"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.875" />

</androidx.constraintlayout.widget.ConstraintLayout>